# veil-core

./: .gitignore  Cargo.toml  rust-toolchain.toml
methods/: Cargo.toml
methods/src/: main.rs
types/: Cargo.toml
types/src/: curves.rs  lib.rs  merkle_sparse.rs  utils.rs  utxo.rs
